--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -23,6 +23,8 @@ services:
     restart: unless-stopped
     tty: true
     entrypoint: redis-server /usr/local/etc/redis/redis.conf
+    env_file:
+      - .env
     ports:
       - "6379:6379"
     volumes:
